WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47544
REGRESSION: Pressing spacebar in a text field in WebKit2 does not insert a space, scrolls the page instead
https://bugs.webkit.org/show_bug.cgi?id=47544
Summary
REGRESSION: Pressing spacebar in a text field in WebKit2 does not insert a sp...
Adam Roben (:aroben)
Reported
2010-10-12 09:35:03 PDT
To reproduce: 1. Go to data:text/html,%3Cdiv%20style=%22overflow:scroll;%20height:200px%22%3E%3Ctextarea%20style=%22height:300px%22%3E 2. Click in the textarea 3. Press the spacebar A space is not inserted in the textarea. Instead, the <div> containing it gets scrolled!
Attachments
Let WebCore handle scrolling when the spacebar is pressed
(2.67 KB, patch)
2010-10-12 10:00 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Let WebCore handle scrolling when the spacebar is pressed on Windows
(22.64 KB, patch)
2010-10-13 10:31 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-12 09:35:51 PDT
<
rdar://problem/8540645
>
Adam Roben (:aroben)
Comment 2
2010-10-12 10:00:50 PDT
Created
attachment 70539
[details]
Let WebCore handle scrolling when the spacebar is pressed
Adam Roben (:aroben)
Comment 3
2010-10-13 10:31:52 PDT
Created
attachment 70623
[details]
Let WebCore handle scrolling when the spacebar is pressed on Windows
WebKit Review Bot
Comment 4
2010-10-13 10:34:23 PDT
Attachment 70623
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/TestWebKitAPI/Tests/WebKit2/SpacebarScrolling.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKitTools/TestWebKitAPI/Tests/WebKit2/SpacebarScrolling.cpp:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 5
2010-10-13 10:41:45 PDT
Committed
r69671
: <
http://trac.webkit.org/changeset/69671
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug