WebKit2/WebProcess/WebPage/win/WebPageWin.cpp
@@ -198,12 +198,6 @@ bool WebPage::performDefaultBehaviorForKeyEvent(const WebKeyboardEvent& keyboard
         else
             m_page->goBack();
         break;
-    case VK_SPACE:
-        if (keyboardEvent.shiftKey())
-            scroll(m_page.get(), ScrollUp, ScrollByPage);
-        else
-            scroll(m_page.get(), ScrollDown, ScrollByPage);
-        break;
     case VK_LEFT:
         scroll(m_page.get(), ScrollLeft, ScrollByLine);
         break;
